tests/ui/asm/naked-functions-target-feature.stderr
error[E0736]: attribute incompatible with `#[naked]`
  --> $DIR/naked-functions-target-feature.rs:8:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this attribute is incompatible with `#[naked]`
LL |
LL | #[naked]
   | -------- function marked with `#[naked]` here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0736`.
